# astro-map

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  gen_stars.py
scripts/: double_to_float.py  gen_stars.py
src/: astro.c  astro.h  bsc.c  bsc.h  main.c  render.c  render.h  render_sdl.c
src/board/: CMakeLists.txt
src/board/desktop/: CMakeLists.txt  board_gps.c  board_render.c
src/board/include/: board.h  board_gps.h  board_render.h
src/board/linux/: CMakeLists.txt  board.c  board_gps.c  board_render.c  freertos_hooks.c
src/board/linux/freertos/: FreeRTOSConfig.h
src/board/stm32g4/: CMakeLists.txt  board.c  board_gps.c  board_pins.h  board_render.c  freertos_hooks.c  platform.c  platform.h  syscalls.c  uc8179.h
src/board/stm32g4/freertos/: CMakeLists.txt  FreeRTOSConfig.h
